code/src/objects/Project__c.object
<CustomObject>
    <description>It contains all the projects</description>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Budget of a project</description>
        <inlineHelpText>Budget of a project</inlineHelpText>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the account</description>
        <inlineHelpText>Name of the account</inlineHelpText>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of a Project</description>
        <inlineHelpText>Description of a Project</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of a project</description>
        <inlineHelpText>End Date of a project</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of this project</description>
        <inlineHelpText>Manager of this project</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of a project</description>
        <inlineHelpText>Start date of a project</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>